# geomview

./: .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL.Geomview  Makefile.am  NEWS  README  README.cvs  TODO  acconfig.h  aclocal.m4  boot  build  build.in  configure  configure.ac  configure.in  geomview.sh  gvcl-mode.el  mkinstalldirs  mkmodulesdir  packbuild.in  rcs2log  reconf
data/: .geomview  Makefile.am  cmap.fmap
data/NDview/: Makefile.am
data/NDview/cplxview/: Makefile.am
data/NDview/cplxview/scripts/: 4d.colorcplx  4d.cplx  del_c0  reset.script  startup.script
data/NDview/geom/: 4cube  4daxes  6daxes  flattorus  funcplane  klein4d.skel  octaplex.skel  orthoplex.skel  pluker23col.4d  simplex.skel  tetraplex.skel
data/NDview/geom/demo/: axes  point  segmentw+x+z+
data/NDview/scripts/: 4d.2bigwins  4d.3wins  4d.4wins  4d.cplx  4d.xyw  4d.xyz  4d.xzw  4d.yzw  4dcol.w.rb  5d.123  5d.5wins  5dcol.4.rb  color.script  delete_all.script  deletecams.script  nocolor.script  startup.big.script  startup.small.script
data/NDview/text/: axeshelp.txt  cube.txt  demohelp.txt  pointd.txt  prefabhelp.txt  squared.txt
data/gcl/: arithmetic.gcl  events.gcl
data/geom/: .cvsignore  HingeDiamond  HingeTetra  HingeTriangle  abstr.off  alphabet.vect  antoine0.oogl  antoine1.oogl  antoine2.oogl  antoine3.oogl  axes.list  br2.grp  br2.off  br4.2  br4fd.grp  br4fd.list  cam.off  camera-frustum  catenoid  cdodec.quad  cone.off  csquare.quad  cube  diamond  dodec  dodec.quad  dodec.vect  dodec2.off  facecube.off  flythrough_diagram.gv  helicoid  hypercube.off  ico.grp  icosa.off  icosa.quad  jungle.list  klein8  link2.grp  link8.grp  moebius.4d.mesh  (+37 more)
data/geom/pieces/: cube1.off  linkA.bez  linkB.bez
data/geom/polyhedra/: cuboctahedron  rhombicosidodecahedron  rhombicuboctahedron  rhombitruncated_cubeoctahedron  snub_cube  snub_dodecahedron  truncated_cube  truncated_dodecahedron  truncated_icosahedron  truncated_octahedron  truncated_tetrahedron
data/geom/spherical/: dodecaplex.off  flattorus.mesh  hypercube.off  octaplex.off  orthoplex.off  ruledtorus.mesh  simplex.off  tetraplex.off  twosided.flattorus
data/geom/textured/: Antenna.geom  Earth.pam.bz2  GCGball  dodec.off  image.gcl  lunar-t.oogl  rabbitball  sphere.gcl  square.off  themi.bez
data/groups/: 101a.dgp  101b.dgp  230data  230data.Conway  230data.lat  230data.names  3torus.dgp  3torus2.dgp  94a.dgp  94b.dgp  borrom.dgp  borrom3.dgp  borrom4.dgp  br4.0.tlist  br4.2.tlist  br4.3.tlist  dir.3.gv  equi.1.gv  equi.3.gv  fig8.dgp  g233.prj  g234.prj  g235.prj  g236.prj  g237.prj  good_klein_quick.dgp  klein.wa  klein_bricks.dgp  loop.2.gv  loop.3.gv  quart.1.gv  quart.3.gv  quart.4.gv  sample.proj.dgp  sample.uhs.dgp  tetra2.dgp  wholecube.geom
data/shaders/: .cvsignore  GVblendconstant.sl  GVblendplastic.sl  GVdecalconstant.sl  GVdecalplastic.sl  GVmodulateconstant.sl  GVmodulateplastic.sl  GVreplaceconst.sl  GVreplaceconstant.sl  GVreplaceplastic.sl  Makefile.am  README  hlight.sl  hlight.slo  hmatte.sl  hmatte.slo  hplastic.sl  hplastic.slo  rgbapaintedconstant.sl  rgbapaintedplastic.sl  rgbmaskpaintedconstant.sl  rgbmaskpaintedplastic.sl
doc/: .cvsignore  Makefile.am  README  example1.c  example3.c  example4.tcl  geomview-pt_BR.texi  geomview.1  geomview.5  geomview.5gv  geomview.texi  lisp.3  lisp.3gv  motion.html  motion.tex  newsletter_article.txt  oogl.5gv  oogltour  oogltour-pt_BR  version-pt_BR.texi  version.texi
doc/FAQ/: FAQ.html  FAQ.tex  README  faq.html
doc/figs/: .cvsignore  ap.ps  cam.ps  color.ps  command.ps  eps2pdf1.sh  fig2.ps  initial.ps  light.ps  load.ps  main.ps  mat.ps  myfilelist.ps  save.ps  secondlinelist.ps  tools.ps  trefdodecinter.ps
doc/html/: .cvsignore  Makefile.am
doc/pt_BR/: FAQ-pt_BR.html  FAQ-pt_BR.tex  acentos_texinfo.sh  acentos_texinfo_utf8.sh  exemplo1.c  generate_doc.sh  geomview-pt_BR.texi  geomview_cvs.sh  geomview_pt_BR.texi  oogltour-pt_BR.tex  oogltour_pt_BR  texinfo.tex  version_pt_BR.texi
src/: .cvsignore  Makefile.am
src/lib/: .cvsignore  ChangeLog  Makefile.am
src/lib/aclib/: .cvsignore  Headers  Makefile.am  acosh.c  alloca.c  fmemopen.c  lstat.c  memcmp.c  obstack.c  popen.c  putenv.c  stat.c  strcasecmp.c  strdup.c  strncasecmp.c
src/lib/camera/: .cvsignore  Headers  Makefile.am  camcompat.c  camera.c  camera.h  cameraP.h  camstream.c
src/lib/color/: .cvsignore  Headers  Makefile.am  color.c  color.h  merge.h  mergein.c  mergeout.c  mergeover.c  mergeplus.c  mergeunder.c  paintcopy.c  paintover.c
src/lib/fexpr/: .cvsignore  Headers  Makefile.am  binfuncs.c  complex.c  evaluate.c  exprs.c  fexpr.h  fexprnew.h  lex.yy.c  monfuncs.c  parse.tab.c-saved  parse.tab.h  real.c  vars.c
src/lib/forms/: Headers  Makefile.am  xforms-compat.h
src/lib/geometry/: Headers  Makefile.am  geomtypes.h
src/lib/geometry/cmodel/: .cvsignore  Headers  Makefile.am  cm_geometry.c  cmodel.c  cmodel.h  cmodelP.h  cmodel_data.c
src/lib/geometry/hpoint3/: Headers  Makefile.am  hg4.c  hg4.h  hline3.c  hline3.h  hplane3.c  hplane3.h  hpoint3.c  hpoint3.h  hpoint3a.c  hpoint3b.c  line.h  plane.h  point.h  tolerance.h
src/lib/geometry/hpointn/: Headers  Makefile.am  hpointn.c  hpointn.h  hpointnb.c
src/lib/geometry/ntransobj/: Headers  Makefile.am  ntransobj.c  ntransobj.h
src/lib/geometry/point3/: Headers  (+6 more)
src/lib/geomutil/: Makefile.am  geomutil.3  geomutil.3gv
src/lib/gprim/: Makefile.am
src/lib/mg/: Makefile.am  mg.attr  mg.doc
src/lib/mib/: Headers  Makefile.am  mibButton.c  mibDrawArea.c  mibFrame.c  mibLabel.c  mibList.c  mibMenu.c  mibRadioBox.c  mibScale.c  mibScrollBar.c  mibTextBig.c  mibTextBox.c  mibToggle.c  mibload.c  mibload.h  mibwidgets.h
src/lib/oogl/: Makefile.am
src/lib/pointlist/: Headers  Makefile.am  pointlist.c  pointlist.h  pointlistP.h  ptlBezier.c  ptlInst.c  ptlList.c  ptlMesh.c  ptlPolylist.c  ptlQuad.c  ptlVect.c
src/lib/shade/: Headers  Makefile.am  appearance.c  appearance.h  apstream.c  image.c  light.c  material.c  texture.c
src/lib/window/: Headers  Makefile.am  window.c  window.h  windowP.h  winstream.c
(+503 files in other folders)
